--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
@@ -284,7 +284,7 @@
                     Người tạo
                 </th>
                 <th style="text-align : center;">
-                    Mã Voucher
+                     Voucher
                 </th>
                 <th style="text-align : center;">
                     Ngày tạo
@@ -334,14 +334,15 @@
                         }
                 </td>
                 <td style="text-align : center; margin-bottom : 20px">
-                    @foreach (var vc in lstVC)
+                   @*  @foreach (var vc in lstVC)
                     {
                         if (vc.MaVoucher == Model.MaVoucher)
                         {
                             @vc.Ten
                             
                         }
-                    }
+                    } *@
+                        @Model.MaVoucher
                 </td>
                 <td style="text-align : center; margin-bottom : 20px">
                     @Model.NgayTaoDon
