--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml
@@ -75,7 +75,7 @@
                             <span class="hide-menu">Thống kê</span>
                         </li>
                         <li class="sidebar-item">
-                            <a class="sidebar-link" asp-area="Admin" asp-controller="Statistical" asp-action="GetDoanhThu7NgayGanNhat" aria-expanded="false">
+                            <a class="sidebar-link" asp-area="Admin" asp-controller="Statistical" asp-action="ThongKe" aria-expanded="false">
                                 <span>
                                     <i class="bi bi-speedometer2"></i>
                                 </span>
